@@ -21,6 +21,9 @@
 
 * Changed 'muninn-ingest -c' command to mean 'catalogue only'
 
+* Added basic 'in' and 'not in' operators (so that e.g. the following works:
+ 'physical_name not in ["a", "b"])
+
 5.0 2020-07-30
 ~~~~~~~~~~~~~~
 
